data/derived/comb/progs/unify/prog7793.ml.out
Characters 32-36:
  let fixpoint (f,b) = if not(f = f(b)) then
                                  ^^^^
Error: This expression has type 'a but an expression was expected of type
         'b -> 'a
       The type variable 'a occurs inside 'b -> 'a
